tests/baselines/reference/objectTypesIdentityWithNumericIndexers2.errors.txt
==== tests/cases/compiler/objectTypesIdentityWithNumericIndexers2.ts (14 errors) ====
    // object types are identical structurally
    
    class Base { foo: string; }
    class Derived extends Base { bar: string; }
    
    class A {
        [x: number]: Base;
    }
    
    class B {
        [x: number]: Derived;
    }
    
    class C<T> {
        [x: number]: T;
    }
    
    interface I {
        [x: number]: Derived;
    }
    
    class PA extends A {
    }
    
    class PB extends B {
    }
    
    var a: {
        [x: number]: Base;
    }
    var b: { [x: number]: Derived; } = { foo: <Derived>null };
    
    function foo1(x: A);
    function foo1(x: A); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(34,1): error TS2144: Duplicate overload signature for 'foo1'.
    function foo1(x: any) { }
    
    function foo1b(x: B);
    function foo1b(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(38,1): error TS2144: Duplicate overload signature for 'foo1b'.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
    function foo1c(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(42,1): error TS2144: Duplicate overload signature for 'foo1c'.
    function foo1c(x: any) { }
    
    function foo2(x: I);
    function foo2(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(46,1): error TS2144: Duplicate overload signature for 'foo2'.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(50,1): error TS2144: Duplicate overload signature for 'foo3'.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
    function foo4(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(54,1): error TS2144: Duplicate overload signature for 'foo4'.
    function foo4(x: any) { }
    
    function foo5(x: A);
    function foo5(x: B); // ok
    function foo5(x: any) { }
    
    function foo5b(x: A);
    function foo5b(x: C<Derived>); // ok
    function foo5b(x: any) { }
    
    function foo5c(x: A);
    function foo5c(x: PA); // error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(66,1): error TS2144: Duplicate overload signature for 'foo5c'.
    function foo5c(x: any) { }
    
    function foo5d(x: A);
    function foo5d(x: PB); // ok
    function foo5d(x: any) { }
    
    function foo6(x: A);
    function foo6(x: I); // ok
    function foo6(x: any) { }
    
    function foo7(x: A);
    function foo7(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(78,1): error TS2144: Duplicate overload signature for 'foo7'.
    function foo7(x: any) { }
    
    function foo8(x: B);
    function foo8(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(82,1): error TS2144: Duplicate overload signature for 'foo8'.
    function foo8(x: any) { }
    
    function foo9(x: B);
    function foo9(x: C<Base>); // ok
    function foo9(x: any) { }
    
    function foo10(x: B);
    function foo10(x: typeof a); // ok
    function foo10(x: any) { }
    
    function foo11(x: B);
    function foo11(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(94,1): error TS2144: Duplicate overload signature for 'foo11'.
    function foo11(x: any) { }
    
    function foo11b(x: B);
    function foo11b(x: PA); // ok
    function foo11b(x: any) { }
    
    function foo11c(x: B);
    function foo11c(x: PB); // error
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(102,1): error TS2144: Duplicate overload signature for 'foo11c'.
    function foo11c(x: any) { }
    
    function foo12(x: I);
    function foo12(x: C<Derived>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(106,1): error TS2144: Duplicate overload signature for 'foo12'.
    function foo12(x: any) { }
    
    function foo13(x: I);
    function foo13(x: typeof a); // ok
    function foo13(x: any) { }
    
    function foo14(x: I);
    function foo14(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(114,1): error TS2144: Duplicate overload signature for 'foo14'.
    function foo14(x: any) { }
    
    function foo15(x: I);
    function foo15(x: PA); // ok
    function foo15(x: any) { }
    
    function foo16(x: I);
    function foo16(x: PB); // error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithNumericIndexers2.ts(122,1): error TS2144: Duplicate overload signature for 'foo16'.
    function foo16(x: any) { }
    
    